--- a/src/components/MobileNav.astro
+++ b/src/components/MobileNav.astro
@@ -6,7 +6,7 @@
  shown when data-state="open"
  * - Closes on: Esc, outside click, link click, and when resizing to >= md
  */
-import CtaLink from './CtaLink.astro'; // <-- New import
+import CtaLink from './CtaLink.astro';
 ---
 
 <div class="md:hidden">
